--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <h1>DRONE SET UP</h1>
     <form action="/add_drone" method="post">
         <label for="drone_id">drone_id</label>
-        <input type="text" id="drone_id" name="drone_id" value={{ next_drone }}>
+        <input type="text" id="drone_id" name="drone_id" value="{{ next_drone }}">
 
         <label for="drone_speed">drone_id</label>
         <input type="text" id="drone_speed" name="drone_speed" value="20">
@@ -30,10 +30,21 @@
     <br><br><br>
     {% for key, value in drones_bag.items() %}
     <div class="my_paragraph">
-        <p><b>{{ key }}</b></p>
-        <p>Drone_id: {{ value.id }}</p>
-        <p>Drone_vel: {{ value.speed }}</p>
-        <p>Drone_acc: {{ value.acc }}</p>
+        <form action="/action_on_drone" method="post">
+            <p><b>{{ key }}</b></p>
+            <p>Drone_id: {{ value.id }}</p>
+            <label for="drone_id" hidden>Drone_id</label>
+            <input type="hidden" id="drone_id" name="drone_id" value="{{ value.id }}">
+            <label for="drone_speed">Drone_speed</label>
+            <input type="text" id="drone_speed" name="drone_speed" value="{{ value.speed }}">
+            <br>
+            <label for="drone_acc">Drone_acceleration</label>
+            <input type="text" id="drone_acc" name="drone_acc" value="{{ value.acc }}">
+            <br>
+            <button type="submit" name="aod" value="modify_drone">modify_drone</button>
+            <button type="submit" name="aod" value="duplicate_drone">duplicate_drone</button>
+            <button type="submit" name="aod" value="remove_drone">remove_drone</button>
+        </form>
     </div>
     {% endfor %}
 </body>
