added import json function

--- a/templates/webpage/index.html
+++ b/templates/webpage/index.html
@@ -57,11 +57,18 @@
         <button type="submit" name="text_button">add perimeter</button>
     </form>
     <br>
-    <form action="export_json" method="get">
+    <form action="/export_json" method="get">
         <label for="e_json">route of exported json</label>
         <input type="text" id="e_json" name="e_json", value="{{ downloads }}">
 
         <button type="submit" name="export_json">export_json</button>
+    </form>
+    <br>
+    <form action="/import_json" method="post">
+        <label for="i_json">route of imported json</label>
+        <input type="text" id="i_json" name="i_json", value="{{ downloads }}/imported.json">
+
+        <button type="submit" name="import_json">import_json</button>
     </form>
     <br>
     {% for key, value in drones_bag.items() %}
